exports[`test A standard order 1`] = `
<li
  className="dwPMZY">
  <span
    className="wgXGK">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fjzskW">
    MOOIE 456 TEST
  </span>
  <span
    className="column--order-items hGMasR">
    <span
      className="gLZwgs">
      <span
        className="gLZwgs">
        Name of the product
      </span>
      <span
        className="gLZwgs">
        Another product
      </span>
    </span>
  </span>
  <span
    className="gaSTWT">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="fUjetu">
    completed
  </span>
  <span
    className="column--order-invoice-button fvaPPL">
    <a
      aria-label="Download invoice"
      className="cWcbKk"
      href="http://somelink"
      iconSource="download.svg"
      to="http://somelink" />
  </span>
</li>
`;

exports[`test An Order with a disabled invoice button 1`] = `
<li
  className="dwPMZY">
  <span
    className="wgXGK">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fjzskW">
    MOOIE 456 TEST
  </span>
  <span
    className="column--order-items hGMasR">
    <span
      className="gLZwgs">
      <span
        className="gLZwgs">
        Name of the product
      </span>
      <span
        className="gLZwgs">
        Another product
      </span>
    </span>
  </span>
  <span
    className="gaSTWT">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="fUjetu">
    pending
  </span>
  <span
    className="column--order-invoice-button fvaPPL">
    <button
      aria-label="Download invoice"
      className="wmLcN dsTvgF"
      disabled="disabled"
      to="http://somelink" />
  </span>
</li>
`;
